<resources>
    <string name="app_name">Tansport Manager</string>
    <string name="sign_up">Sign Up</string>
    <string name="local_user">Local User</string>
    <string name="foreign_user">Foreign User</string>
    <string name="select_user_type">Select User Type:</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="nic_passport">NIC / Passport</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="passsword">Passsword</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="top_up">Top Up</string>
    <string name="insert_amount">Insert Amount</string>
    <string name="current_journey_details">Current Journey Details</string>
    <string name="passanger">Passanger :</string>
    <string name="user_name">User Name</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="start_location">Start Location</string>
    <string name="passenger">Passenger</string>
    <string name="end_time">End Time</string>
    <string name="end_location">End Location</string>
    <string name="distance">Distance</string>
    <string name="journey_completed">Journey Completed!</string>
    <string name="start_journey">Start Journey</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="genarate">Genarate</string>
    <string name="scan_bus_code">Scan Bus Code</string>
    <string name="insert_new_fine">Insert New Fine</string>
    <string name="scan_passenger_code">Scan Passenger Code</string>
    <string name="reason">Reason</string>
    <string name="fine_amount">Fine Amount</string>
    <string name="fine_successfully_inserted">Fine Successfully Inserted !</string>
    <string name="fare">Fare</string>
</resources>